ci: Add GitHub Actions workflow for deploying the studio application to a VPS.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,5 @@ jobs:
             # Adjust this relative path if your folder structure is different
             cd ../shortsai-api
             
-            # Restart services
-            docker-compose down
-            docker-compose up -d --build
+            # Restart Studio service only
+            docker-compose up -d --build studio
