--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,5 @@ jobs:
             git pull origin main || git pull origin master
             
             # Restart Studio service using its own compose file
+            # docker rm -f shortsai-studio || true
             docker-compose up -d --build studio
