--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@google/genai": "^1.30.0",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.24.1",
+    "i18next": "^25.7.1",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.554.0",
     "mp4-muxer": "^5.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^16.3.5",
     "recharts": "^3.5.1"
   },
   "devDependencies": {
