--- a/nginx.conf
+++ b/nginx.conf
@@ -5,16 +5,19 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    # Handle Single Page Application routing
+    # Roteamento do React (SPA)
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Optional: Proxy API requests to backend if needed (or handle via CORS/Env vars)
-    # Optional: Proxy API requests to backend if needed (or handle via CORS/Env vars)
+    # Proxy para a API (Conecta no container 'shortsai-api')
     location /api {
+        # O nome 'shortsai-api' vem do 'aliases' no docker-compose do backend
         proxy_pass http://shortsai-api:3333;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_cache_bypass $http_upgrade;
     }
 }
