--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@ffmpeg/ffmpeg": "^0.12.15",
+    "@ffmpeg/util": "^0.12.2",
     "@google/genai": "^1.30.0",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-query": "^5.24.1",
