--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-query": "^5.24.1",
     "i18next": "^25.7.1",
     "i18next-browser-languagedetector": "^8.2.0",
+    "json5": "^2.2.3",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.554.0",
     "mp4-muxer": "^5.2.2",
