feat: Implement Dashboard for comprehensive project and folder management, add architecture documentation, and rename Docker frontend service.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
   # ==============================
   # FRONTEND (Nginx + React)
   # ==============================
-  studio:
-    container_name: shortai-studio
+  shortsai-studio:
+    container_name: shortsai-studio
     build:
       context: .
       dockerfile: Dockerfile
