--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
             
             # Restart Studio service using its own compose file
             # docker rm -f shortsai-studio || true
-            docker-compose up -d --build studio
+            docker-compose up -d --build shortsai-studio
 
       - name: Wait for retry
         if: steps.deploy_1.outcome == 'failure'
@@ -49,4 +49,4 @@ jobs:
             
             # Restart Studio service using its own compose file
             # docker rm -f shortsai-studio || true
-            docker-compose up -d --build studio
+            docker-compose up -d --build shortsai-studio
