--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,10 @@ jobs:
             git pull origin main || git pull origin master
             
             # Restart Studio service using its own compose file
-            # docker rm -f shortsai-studio || true
-            docker-compose up -d --build shortsai-studio
+            # Restart Studio service using its own compose file
+            docker rm -f shortai-studio || true
+            docker rm -f shortsai-studio || true
+            docker-compose up -d --build --remove-orphans shortsai-studio
 
       - name: Wait for retry
         if: steps.deploy_1.outcome == 'failure'
@@ -48,5 +50,7 @@ jobs:
             git pull origin main || git pull origin master
             
             # Restart Studio service using its own compose file
-            # docker rm -f shortsai-studio || true
-            docker-compose up -d --build shortsai-studio
+            # Restart Studio service using its own compose file
+            docker rm -f shortai-studio || true
+            docker rm -f shortsai-studio || true
+            docker-compose up -d --build --remove-orphans shortsai-studio
