--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       args:
         VITE_API_URL: /api
     ports:
-      - "3000:80" # Site acessível na porta 3000
+      - "80:80" # Site acessível na porta 80 (padrão HTTP)
     environment:
       - VITE_API_URL=/api
     restart: always
