--- a/nginx.conf
+++ b/nginx.conf
@@ -43,7 +43,7 @@ server {
 
     # Proxy para a API (Conecta no container 'shortsai-api')
     location /api {
-        proxy_pass http://shortsai-api:3333;
+        proxy_pass http://shortsai-api:3333/api;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
