fix: aumenta limite de upload para 2GB e melhora tratamento de erros
- Aumenta client_max_body_size de 500M para 2GB no nginx
- Adiciona feedback de erro ao usuário quando upload falha
- Garante reset do estado de drag mesmo em caso de erro
- Aumenta timeouts para 300s para uploads grandes

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,9 @@ server {
 
     # Proxy para a API (Conecta no container 'shortsai-api')
     location /api {
+        # Allow large file uploads - 2GB for high-quality videos
+        client_max_body_size 2048M;
+        
         proxy_pass http://shortsai-api:3333/api;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -26,10 +29,10 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
         
-        # Long timeouts for AI generation
-        proxy_connect_timeout 180s;
-        proxy_send_timeout 180s;
-        proxy_read_timeout 180s;
+        # Long timeouts for AI generation and large uploads
+        proxy_connect_timeout 300s;
+        proxy_send_timeout 300s;
+        proxy_read_timeout 300s;
     }
 
     # Gzip compression
